# eStreamer

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  download.py  firestore_audio_data_ingestor.py  firestore_dummy_data_ingestor.py  predictive_analyzer.py  pyproject.toml  requirements.txt  youtube_ingest.py
audio_transcriber/: Dockerfile  deploy.sh  main.py  requirements.txt
audio_transcribor/: Dockerfile  deploy.sh  main.py  requirements.txt
chat_ingestor/: Dockerfile   __init__.py  deploy.sh  main.py  requirements.txt
chat_ingestor/grpc_proto/: stream_list_pb2_grpc.py
chat_ingestor/proto/: stream_list_pb2.py  stream_list_pb2_grpc.py
chat_processor/: Dockerfile  deploy.sh  main.py  requirements.txt
server/: Dockerfile  deploy.sh  main.py  pyproject.toml  requirements.txt
server/controllers/: __init__.py  analyzer.py  correlate.py  downloader.py  poll.py  predictor.py  video_status_consumer.py
server/routers/: __init__.py  analyze_router.py  correlate_router.py  download_router.py  poll_router.py  prediction_router.py
server/settings/: base.py
stream-frontend/: README.md  deploy_frontend.sh  index.html  package-lock.json  package.json  vite.config.js
stream-frontend/public/: index.html
stream-frontend/src/: App.jsx  common.jsx  index.css  main.jsx
stream-frontend/src/app/: store.js
stream-frontend/src/components/: Analytics.jsx  Download.jsx  HotTopics.jsx  LiveSyncFeed.jsx  Loader.jsx  MainInputBox.jsx  MostActiveUsers.jsx  PredictiveAnalysis.jsx  SentimentBox.jsx  StreamURLInput.jsx  TimeRangeSelector.jsx  TopChats.jsx
stream-frontend/src/features/api/: apiSlice.js
stream-frontend/src/features/stream/: streamSlice.js
video_downloader/: Dockerfile  deploy.sh  main.py  pyproject.toml
video_downloader/controllers/: __init__.py  consumer.py
video_downloader/settings/: base.py
web_server/: apps.py  pyproject.toml
web_server/routers/: __init__.py  config.py  health.py
